# nimbus

./: .gitignore  Cargo.toml  LICENSE  README.md  nimbus.sublime-project
asset/: halo.blend  halo.blend1  icon.xcf  logo.blend
bash/: README.md  build.sh  run.sh  run_client.sh  run_server.sh
client/: Cargo.toml
client-desktop/: Cargo.toml
client-desktop/src/: app.rs  main.rs  user.rs
client/src/: lib.rs
common/: Cargo.toml
common/src/: account.rs  channel.rs  command.rs  lib.rs  message.rs  prelude.rs  server.rs  sticker.rs
server/: Cargo.toml
server/src/: main.rs
source/: README.md
source/client/: Cargo.toml
source/client-desktop/: Cargo.toml
source/client-desktop/src/: app.rs  layout.rs  main.rs  system.rs  user.rs
source/client/src/: client.rs  client_multi.rs  lib.rs  prelude.rs
source/common/: Cargo.toml
source/common/src/: account.rs  command.rs  identifier.rs  lib.rs  markdown.rs  message.rs  prelude.rs  server.rs
source/nimbus-client/: Cargo.toml
source/nimbus-client/asset/locale/: en.toml
source/nimbus-client/src/: app.rs  client.rs  client_multi.rs  layout.rs  lib.rs  main.rs  prelude.rs  system.rs  user.rs
source/nimbus-common/: Cargo.toml
source/nimbus-common/src/: account.rs  channel.rs  command.rs  configuration.rs  lib.rs  message.rs  prelude.rs  role.rs  server.rs
source/nimbus-desktop/: Cargo.toml
source/nimbus-desktop/asset/locale/: en.toml
source/nimbus-desktop/src/: app.rs  layout.rs  main.rs  user.rs
source/nimbus-protocol/: Cargo.toml
source/nimbus-protocol/src/: account.rs  cache.rs  category.rs  channel.rs  client.rs  client_multi.rs  command.rs  configuration.rs  emote.rs  file.rs  invite.rs  lib.rs  markdown.rs  message.rs  pipe.rs  prelude.rs  role.rs  server.rs  stamp.rs  storage.rs  token.rs  utility.rs
source/nimbus-server/: Cargo.toml
source/nimbus-server/src/: command.rs  main.rs
source/server/: Cargo.toml
source/server/src/: main.rs
