[package]
name    = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde   = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
tokio   = { version = "1.0", features = ["full"]  }
anyhow  = { version = "1.0" }
common  = { path = "../common"  }