[package]
name    = "client-desktop"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio       = { version = "1.0", features = ["full"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
bincode     = { version = "2.0",    features = ["serde"] }
eframe      = { version = "0.34.3", features = ["serde"] }
egui        = { version = "0.34.3", features = ["serde"] }
egui_extras = { version = "0.34.3", features = ["all_loaders"] }
egui-modal  = { git     = "https://github.com/zeozeozeo/egui-modal.git", branch = "egui-0.34" }
qrcode      = { version = "0.14.1" }
image       = { version = "0.24.0" }
resvg       = { version = "0.44"   }
usvg        = { version = "0.44"   }
tiny-skia   = { version = "0.11"   }
rfd         = { version = "0.17.2" }
chrono      = { version = "0.4" }
anyhow      = { version = "1.0"    }
client      = { path = "../client" }