[package]
name    = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio         = { version = "1.0",   features = ["full"]      }
serde         = { version = "1.0",   features = ["derive"]    }
bincode       = { version = "2.0",   features = ["serde"]     }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
anyhow        = { version = "1.0"    }
common        = { path = "../common" }