[package]
name    = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde         = { version = "1.0",   features = ["derive"] }
serde_json    = { version = "1.0" }
bincode       = { version = "2.0",   features = ["serde"] }
tokio         = { version = "1.0",   features = ["full"]  }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand          = { version = "0.8" }
chrono        = { version = "0.4" }
anyhow        = { version = "1.0" }