[package]
name    = "nimbus-desktop"
version = "0.1.0"
edition = "2024"

# tray-icon:
# sudo apt install libgtk-3-dev libxdo-dev libappindicator3-dev # or libayatana-appindicator3-dev (libayatana for Mint)

[dependencies]
tokio         = { version = "1.0", features = ["full"]   }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = { version = "1.0" }
bincode       = { version = "2.0",    features = ["serde"] }
eframe        = { version = "0.34.3", features = ["serde"] }
egui          = { version = "0.34.3", features = ["serde"] }
egui_extras   = { version = "0.34.3", features = ["all_loaders"] }
rust-i18n     = { version = "4.1.0"  }
qrcode        = { version = "0.14.1" }
image         = { version = "0.24.0" }
resvg         = { version = "0.44"   }
usvg          = { version = "0.44"   }
tiny-skia     = { version = "0.11"   }
tray-icon     = { version = "0.24.1" }
notify-rust   = { version = "4.18.0", features = ["images"] }
rfd           = { version = "0.17.2" }
chrono        = { version = "0.4"    }
anyhow        = { version = "1.0"    }
nimbus-client = { path = "../nimbus-client" }

[target.'cfg(target_os = "linux")'.dependencies]
gtk       = { version = "0.18.2" }