[package]
name    = "nimbus-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow        = { version = "1.0" }
tokio         = { version = "1.0",   features = ["full"]   }
serde         = { version = "1.0",   features = ["derive"] }
ciborium      = { version = "0.2.2" }
rmp-serde     = { version = "1.3.1" }
chrono        = { version = "0.4"   }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand          = { version = "0.8"   }
redb          = { version = "4.1.0" }